--- a/Areas/Manager/Views/Trainee/Create.cshtml
+++ b/Areas/Manager/Views/Trainee/Create.cshtml
@@ -63,7 +63,7 @@
                     @Html.TextBoxFor(m => m.DoB, new { @class = "form-control", @placeholder = "Date Of Birth", @type = "date", @required = "required" })
                 </div>
                 <div class="col-md-5">
-                    @Html.TextBoxFor(m => m.ToeicScore, new { @class = "form-control", @placeholder = "Toeic Score", @type = "number", @required = "required" })
+                    @Html.TextBoxFor(m => m.ToeicScore, new { @class = "form-control", @placeholder = "Toeic Score", @required = "required" })
                 </div>
             </div>
         </div>
