--- a/Areas/Manager/Views/Trainer/Index.cshtml
+++ b/Areas/Manager/Views/Trainer/Index.cshtml
@@ -6,24 +6,40 @@
 }
 
 <h2>@ViewBag.Title</h2>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Avartar)
-        </th>
-        <th colspan="3">
-            @Html.ActionLink("Create", "Create", null, new { @class="btn btn-block btn-primary" })
-        </th>
-    </tr>
+<table class="table table-bordered table-borderless">
+    <thead class="table-dark">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PhoneNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FirstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Avartar)
+            </th>
+            <th colspan="
+                    @if (User.IsInRole("ROLE_ADMIN")) { 
+                        @:3
+                    }
+                    else
+                    {
+                        @:1
+                    }
+                ">
+                @Html.ActionLink("Create", "Create", null, new { @class = "btn btn-block btn-primary" })
+            </th>
+            @if (User.IsInRole("ROLE_TRAINING_STAFF"))
+            {
+                <th colspan="2">
+                    @Html.ActionLink("Assign To Course", "AssignTrainerToCourse", null, new { @class = "btn btn-block btn-outline-primary" })
+                </th>
+            }
+        </tr>
+    </thead>
 
     @foreach (var item in Model)
     {
