--- a/Areas/Manager/Views/TrainingStaff/Create.cshtml
+++ b/Areas/Manager/Views/TrainingStaff/Create.cshtml
@@ -8,7 +8,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm("Create", "Trainer", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Create", "TrainingStaff", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <hr />
