--- a/Areas/Manager/Views/Trainer/Index.cshtml
+++ b/Areas/Manager/Views/Trainer/Index.cshtml
@@ -21,23 +21,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Avartar)
             </th>
-            <th colspan="
-                    @if (User.IsInRole("ROLE_ADMIN")) { 
-                        @:3
-                    }
-                    else
-                    {
-                        @:1
-                    }
-                ">
+            <th>
                 @Html.ActionLink("Create", "Create", null, new { @class = "btn btn-block btn-primary" })
             </th>
-            @if (User.IsInRole("ROLE_TRAINING_STAFF"))
-            {
-                <th colspan="2">
-                    @Html.ActionLink("Assign To Course", "AssignTrainerToCourse", null, new { @class = "btn btn-block btn-outline-primary" })
-                </th>
-            }
         </tr>
     </thead>
 
@@ -54,20 +40,24 @@
         @Html.DisplayFor(modelItem => item.FirstName)
     </td>
     <td>
-        <img src="@Html.DisplayNameFor(model => model.Avartar)" alt="Avartar" />
+        <img src="@item.Avartar" alt="Avartar" width="100px" height="100px" />
     </td>
     <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-block btn-dark" })
-    </td>
-    <td>
-        @using (Html.BeginForm("Delete", "Trainer", new { Id = item.Id }, FormMethod.Post))
-        {
-            @Html.AntiForgeryToken()
-            <button class="btn btn-block btn-danger" type="submit">Delete</button>
-        }
-    </td>
-    <td>
-        @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-block btn-default" })
+        <div class="btn-group btn-block">
+            <button type="button" class="btn btn-default dropdown-toggle dropdown-icon" data-toggle="dropdown">
+                Actions
+            </button>
+            <div class="dropdown-menu" role="menu">
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "dropdown-item" })
+                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "dropdown-item" })
+                <div class="dropdown-divider"></div>
+                @using (Html.BeginForm("Delete", "Trainer", new { Id = item.Id }, FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    <button onclick="return confirm('Are you sure to delete')" class="dropdown-item text-danger" type="submit">Delete</button>
+                }
+            </div>
+        </div>
     </td>
 </tr>
     }
