--- a/Areas/Manager/Views/UserCourse/Index.cshtml
+++ b/Areas/Manager/Views/UserCourse/Index.cshtml
@@ -30,9 +30,9 @@
             @Html.DisplayFor(modelItem => item.User.FirstName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit") |
+            @Html.ActionLink("Details", "Details") |
+            @Html.ActionLink("Delete", "Delete", new { @onclick = "return confirm('Are you sure to delete')" })
         </td>
     </tr>
 }
