--- a/Areas/Manager/Views/CourseCategory/Index.cshtml
+++ b/Areas/Manager/Views/CourseCategory/Index.cshtml
@@ -31,7 +31,7 @@
                 @using (Html.BeginForm("Delete", "CourseCategory", new { Id = item.Id }, FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
-                    <button class="btn btn-block btn-danger" type="submit">Delete</button>
+                    <button onclick = "return confirm('Are you sure to delete')" class="btn btn-block btn-danger" type="submit">Delete</button>
                 }
             </td>
         </tr>
