--- a/Areas/Manager/Views/Trainee/Index.cshtml
+++ b/Areas/Manager/Views/Trainee/Index.cshtml
@@ -23,55 +23,44 @@
             <th>
                 @Html.DisplayNameFor(model => model.Avartar)
             </th>
-            <th colspan="
-                    @if (User.IsInRole("ROLE_ADMIN")) {
-                        @:3
-                    }
-                    else
-                    {
-                        @:1
-                    }
-                ">
+            <th colspan="3">
                 @Html.ActionLink("Create", "Create", null, new { @class = "btn btn-block btn-primary" })
             </th>
-            @if (User.IsInRole("ROLE_TRAINING_STAFF"))
-            {
-                <th colspan="2">
-                    @Html.ActionLink("Assign To Course", "AssignTraineeToCourse", null, new { @class = "btn btn-block btn-outline-primary" })
-                </th>
-            }
-            </tr>
     </thead>
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                <img src="@Html.DisplayNameFor(model => model.Avartar)" alt="Avartar" />
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-block btn-dark" })
-            </td>
-            <td>
-                @using (Html.BeginForm("Delete", "Trainee", new {Id=item.Id }, FormMethod.Post))
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Email)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.PhoneNumber)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FirstName)
+    </td>
+    <td>
+        <img src="@item.Avartar" alt="Avartar"  width="100px" height="100px"/>
+    </td>
+    <td>
+        <div class="btn-group btn-block">
+            <button type="button" class="btn btn-default dropdown-toggle dropdown-icon" data-toggle="dropdown">
+                Actions
+            </button>
+            <div class="dropdown-menu" role="menu">
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "dropdown-item" })
+                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "dropdown-item" })
+                <div class="dropdown-divider"></div>
+                @using (Html.BeginForm("Delete", "Trainer", new { Id = item.Id }, FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
-                    <button class="btn btn-block btn-danger" type="submit">Delete</button>
+                    <button onclick="return confirm('Are you sure to delete')" class="dropdown-item text-danger" type="submit">Delete</button>
                 }
-            </td>
-            <td>
-                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-block btn-default" })
-            </td>
-        </tr>
+            </div>
+        </div>
+    </td>
+</tr>
     }
 
 </table>
