--- a/Areas/Manager/Views/Trainer/AssignTrainerToCourse.cshtml
+++ b/Areas/Manager/Views/Trainer/AssignTrainerToCourse.cshtml
@@ -12,12 +12,12 @@
     <div class="form-horizontal">
         <h4>@ViewBag.Title</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <p style="color:red">@ViewBag.Message</p>
         <div class="form-group">
-            @Html.LabelFor(model => model.UserId, "Trainer's Email", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.UserId, "Trainee's Id", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UserId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+                <input value="@ViewBag.UserId" name="UserId" class="form-control" readonly />
+                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger", @readonly = "readonly" })
             </div>
         </div>
 
