--- a/Areas/Manager/Views/TrainingStaff/Details.cshtml
+++ b/Areas/Manager/Views/TrainingStaff/Details.cshtml
@@ -12,7 +12,7 @@
         <div class="card card-primary card-outline">
             <div class="card-body box-profile">
                 <div class="text-center">
-                    <img class="profile-user-img img-fluid img-circle" src="../../dist/img/user4-128x128.jpg"
+                    <img class="profile-user-img img-fluid img-circle" src="@Model.Avartar"
                          alt="User profile picture">
                 </div>
 
@@ -24,7 +24,7 @@
                 @using (Html.BeginForm("Delete", "TrainingStaff", new { Id = Model.Id }, FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
-                    <button class="btn btn-block btn-danger" type="submit">Delete</button>
+                    <button onclick="return confirm('Are you sure to delete')" class="btn btn-block btn-danger" type="submit">Delete</button>
                 }
             </div>
             <!-- /.card-body -->
