--- a/Views/Shared/_Login.cshtml
+++ b/Views/Shared/_Login.cshtml
@@ -6,7 +6,7 @@
     {
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="~/Assets/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                <img src="https://www.minervastrategies.com/wp-content/uploads/2016/03/default-avatar.jpg" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
                 <a class="d-block">@User.Identity.GetUserName()</a>
