--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -36,9 +36,17 @@
             </a>
         </li>
         <li class="nav-item">
-                <a class="nav-link" href="/Account/Logout" role="button">
-                    <i class="fas fa-sign-out-alt"></i>Logout
+            <div class="nav-link">
+                <a style="color: grey" class="fas fa-user-cog" data-toggle="dropdown">
                 </a>
+                <div class="dropdown-menu" role="menu">
+                    @Html.ActionLink("Change Password","ChangePassword", "Account", new{ area=""}, new { @class = "dropdown-item" })
+                    <div class="dropdown-divider"></div>
+                    <a class="nav-link" href="/Account/Logout" role="button">
+                        <i class="fas fa-sign-out-alt"></i>Logout
+                    </a>
+                </div>
+            </div>
         </li>
         </ul>
 </nav>
